--- a/Pages/veille technologique.html
+++ b/Pages/veille technologique.html
@@ -382,6 +382,230 @@
             </div>
         </div>
 
+
+        <!-- Comptes X Benchmarks -->
+        <div class="routine-step">
+            <div class="step-number-badge">5</div>
+            <h3 class="routine-title">📊 Comptes X : Benchmarks & Tests IA</h3>
+            <p class="routine-description">
+                Je suis plusieurs comptes X (Twitter) spécialisés dans les benchmarks et comparaisons d'IA.
+                Ces comptes testent quotidiennement les derniers modèles et publient des résultats concrets,
+                ce qui me permet de voir rapidement quels outils sont les plus performants.
+            </p>
+
+            <div class="x-accounts-section">
+                <h4 class="servers-subtitle">📱 Comptes X que je suis :</h4>
+                <div class="x-accounts-grid">
+                    <a href="https://x.com/claudeai" target="_blank" class="x-account-link">
+                        <div class="x-account-card">
+                            <div class="x-account-header">
+                                <span class="x-icon">𝕏</span>
+                                <div class="x-account-info">
+                                    <h5>@claudeai</h5>
+                                    <p class="x-account-desc">Anthropic - Updates Claude AI</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="https://x.com/OpenAI" target="_blank" class="x-account-link">
+                        <div class="x-account-card">
+                            <div class="x-account-header">
+                                <span class="x-icon">𝕏</span>
+                                <div class="x-account-info">
+                                    <h5>@OpenAI</h5>
+                                    <p class="x-account-desc">Annonces officielles OpenAI</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="https://x.com/kimmonismus" target="_blank" class="x-account-link">
+                        <div class="x-account-card">
+                            <div class="x-account-header">
+                                <span class="x-icon">𝕏</span>
+                                <div class="x-account-info">
+                                    <h5>@kimmonismus</h5>
+                                    <p class="x-account-desc">Benchmarks & analyses comparatives</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="https://x.com/arcprize" target="_blank" class="x-account-link">
+                        <div class="x-account-card">
+                            <div class="x-account-header">
+                                <span class="x-icon">𝕏</span>
+                                <div class="x-account-info">
+                                    <h5>@arcprize</h5>
+                                    <p class="x-account-desc">ARC Prize - Tests de raisonnement IA</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="https://x.com/arena" target="_blank" class="x-account-link">
+                        <div class="x-account-card">
+                            <div class="x-account-header">
+                                <span class="x-icon">𝕏</span>
+                                <div class="x-account-info">
+                                    <h5>@arena</h5>
+                                    <p class="x-account-desc">Chatbot Arena - Comparaisons LLM</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="benchmark-sites-section">
+                <h4 class="benchmark-title">🏆 Plateformes de Benchmarks</h4>
+                <p class="benchmark-intro">
+                    Je consulte régulièrement ces trois plateformes qui proposent des classements
+                    et comparaisons détaillées entre les différents modèles d'IA :
+                </p>
+
+                <div class="benchmark-sites-grid">
+                    <a href="https://artificialanalysis.ai/leaderboards/models" target="_blank" class="benchmark-site-link">
+                        <div class="benchmark-site-card">
+                            <div class="site-header">
+                                <span class="site-emoji">📊</span>
+                                <div class="site-info">
+                                    <h5>Artificial Analysis</h5>
+                                    <p class="site-url">artificialanalysis.ai</p>
+                                </div>
+                            </div>
+                            <p class="site-description">
+                                Leaderboard complet avec métriques de performance, prix et vitesse d'exécution.
+                                Comparaisons détaillées sur qualité, coût et rapidité.
+                            </p>
+                            <div class="site-features">
+                                <span class="feature-tag">Performance</span>
+                                <span class="feature-tag">Prix/Token</span>
+                                <span class="feature-tag">Vitesse</span>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="https://llm-stats.com/" target="_blank" class="benchmark-site-link">
+                        <div class="benchmark-site-card">
+                            <div class="site-header">
+                                <span class="site-emoji">📈</span>
+                                <div class="site-info">
+                                    <h5>LLM Stats</h5>
+                                    <p class="site-url">llm-stats.com</p>
+                                </div>
+                            </div>
+                            <p class="site-description">
+                                Statistiques en temps réel sur les performances des LLM.
+                                Graphiques d'évolution et comparaisons historiques.
+                            </p>
+                            <div class="site-features">
+                                <span class="feature-tag">Stats temps réel</span>
+                                <span class="feature-tag">Graphiques</span>
+                                <span class="feature-tag">Historique</span>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="https://lmarena.ai/leaderboard/" target="_blank" class="benchmark-site-link">
+                        <div class="benchmark-site-card">
+                            <div class="site-header">
+                                <span class="site-emoji">🎯</span>
+                                <div class="site-info">
+                                    <h5>Chatbot Arena</h5>
+                                    <p class="site-url">lmarena.ai</p>
+                                </div>
+                            </div>
+                            <p class="site-description">
+                                Classement basé sur des votes d'utilisateurs réels.
+                                Tests en aveugle pour des résultats objectifs et impartiaux.
+                            </p>
+                            <div class="site-features">
+                                <span class="feature-tag">Vote utilisateurs</span>
+                                <span class="feature-tag">Tests aveugles</span>
+                                <span class="feature-tag">ELO Rating</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="benchmark-examples-section">
+                <h4 class="benchmark-title">📸 Exemples de Benchmarks</h4>
+                <p class="benchmark-intro">
+                    Voici quelques exemples typiques de benchmarks que je consulte sur ces plateformes :
+                </p>
+
+                <div class="benchmark-gallery">
+                    <div class="benchmark-item">
+                        <div class="screenshot-container">
+                            <img src="../img/Veille/benchmark-example-1.png"
+                                 alt="Exemple benchmark Artificial Analysis"
+                                 class="screenshot-img"
+                                 onclick="window.open(this.src, '_blank')">
+                            <p class="screenshot-caption">
+                                <em>Artificial Analysis : Comparaison performance/prix entre modèles GPT, Claude, Gemini</em>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="benchmark-item">
+                        <div class="screenshot-container">
+                            <img src="../img/Veille/benchmark-example-2.png"
+                                 alt="Exemple benchmark Chatbot Arena"
+                                 class="screenshot-img"
+                                 onclick="window.open(this.src, '_blank')">
+                            <p class="screenshot-caption">
+                                <em>Chatbot Arena : Classement ELO basé sur le WebDev</em>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="benchmark-item">
+                        <div class="screenshot-container">
+                            <img src="../img/Veille/benchmark-example-3.png"
+                                 alt="Exemple benchmark LLM Stats"
+                                 class="screenshot-img"
+                                 onclick="window.open(this.src, '_blank')">
+                            <p class="screenshot-caption">
+                                <em>LLM Stats : Évolution des performances sur 500 problèmes d'ingénierie logicielle issus de véritables problèmes GitHub, validés par des annotateurs humains</em>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="insight-box">
+                <strong>💡 Mon utilisation :</strong> Chaque matin, je consulte rapidement le Chatbot Arena pour voir
+                les modèles les mieux classés, puis j'utilise Artificial Analysis quand je dois choisir un modèle pour
+                un projet spécifique (en fonction du budget et des besoins de performance). LLM Stats me permet de suivre
+                les tendances sur le long terme.
+            </div>
+
+            <div class="x-benefits">
+                <h4 class="x-benefits-title">Ce que m'apportent ces ressources :</h4>
+                <div class="benefits-highlight">
+                    <div class="benefit-item">
+                        <span class="benefit-icon">✓</span>
+                        <span>Comparaisons objectives basées sur des données réelles</span>
+                    </div>
+                    <div class="benefit-item">
+                        <span class="benefit-icon">✓</span>
+                        <span>Découverte rapide des nouveaux modèles et mises à jour</span>
+                    </div>
+                    <div class="benefit-item">
+                        <span class="benefit-icon">✓</span>
+                        <span>Aide au choix du meilleur modèle selon le cas d'usage</span>
+                    </div>
+                    <div class="benefit-item">
+                        <span class="benefit-icon">✓</span>
+                        <span>Suivi de l'évolution des performances dans le temps</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Synthèse personnelle -->
         <div class="personal-takeaway">
             <h3>🎯 Ce que cette veille m'apporte concrètement</h3>
@@ -407,7 +631,7 @@
     </div>
 </div>
 
-<!-- Dashboard RSS -->
+<!-- Dashboard Flux RSS -->
 <div id="dashboard" class="section">
     <div class="boxed">
         <h2>📊 Mon Dashboard de Veille en Direct</h2>
