--- a/Pages/veille technologique.html
+++ b/Pages/veille technologique.html
@@ -262,13 +262,34 @@
             </p>
 
             <div class="screenshot-container">
-                <img src="../img/Veille/feedly-flux.png"
-                     alt="Mes flux RSS sur Feedly"
-                     class="screenshot-img"
-                     onclick="window.open(this.src, '_blank')">
-                <p class="screenshot-caption">
-                    <em>Aperçu de mes flux RSS organisés par catégorie - Tous mes contenus favoris au même endroit</em>
-                </p>
+                <div class="benchmark-gallery">
+                    <div class="benchmark-item">
+                        <div class="screenshot-container">
+                            <img src="../img/Veille/flux-iadev.png"
+                                 alt="Exemple benchmark Artificial Analysis"
+                                 class="screenshot-img"
+                                 onclick="window.open(this.src, '_blank')">
+                        </div>
+                    </div>
+
+                    <div class="benchmark-item">
+                        <div class="screenshot-container">
+                            <img src="../img/Veille/flux-actuia.png"
+                                 alt="Exemple benchmark Chatbot Arena"
+                                 class="screenshot-img"
+                                 onclick="window.open(this.src, '_blank')">
+                        </div>
+                    </div>
+
+                    <div class="benchmark-item">
+                        <div class="screenshot-container">
+                            <img src="../img/Veille/flux-recherchemodel.png"
+                                 alt="Exemple benchmark LLM Stats"
+                                 class="screenshot-img"
+                                 onclick="window.open(this.src, '_blank')">
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="benefits-highlight">
@@ -286,6 +307,7 @@
                 </div>
             </div>
         </div>
+
 
         <!-- Étape 3 : Dashboard Feedly -->
         <div class="routine-step">
