--- a/index.html
+++ b/index.html
@@ -45,13 +45,12 @@
             <div class="about-text">
                 <h2>À propos de moi</h2>
                 <p>
-                    Étudiant en BTS Services Informatiques aux Organisations (SIO),
-                    je me passionne pour le domaine de l'informatique et des technologies.
-                    Mon parcours me permet de développer des compétences solides en programmation,
-                    gestion de bases de données et conception de systèmes d'information.
-                    Grâce aux projets qui naîtront durant mes études,
-                    je vais acquérir une compréhension approfondie des outils et langages utilisés dans le secteur,
-                    tout en développant des solutions adaptées aux besoins des utilisateurs.
+                    Je suis étudiant en BTS SIO et j’aime comprendre et construire des choses en informatique.
+                    Que ce soit coder, structurer des données ou imaginer comment une application doit fonctionner,
+                    j’aime surtout trouver des solutions concrètes à des problèmes réels.
+
+                    Mes projets me permettent d’apprendre en avançant, de me tromper, de corriger et d’améliorer.
+                    Je cherche surtout à développer des compétences solides et utiles, et à travailler sur des projets qui ont du sens pour les utilisateurs.
                 </p>
             </div>
         </div>
