--- a/Pages/PersonnelApp.html
+++ b/Pages/PersonnelApp.html
@@ -150,12 +150,12 @@
 <!--                        <li>Création des tables avec contraintes d'intégrité</li>-->
                     </ul>
 
-<!--                    <h4>2. Couche d'Accès aux Données (DAO)</h4>-->
-<!--                    <ul class="feature-list">-->
-<!--                        <li>Développement des classes DAO pour chaque entité</li>-->
-<!--                        <li>Implémentation des méthodes CRUD</li>-->
-<!--                        <li>Gestion des connexions à la base de données</li>-->
-<!--                    </ul>-->
+                    <h4>2. Couche d'Accès aux Données (DAO)</h4>
+                    <ul class="feature-list">
+                        <li>Développement des classes DAO pour chaque entité</li>
+                        <li>Implémentation des méthodes CRUD</li>
+                        <li>Gestion des connexions à la base de données</li>
+                    </ul>
 
 <!--                    <h4>3. Système d'Authentification</h4>-->
 <!--                    <ul class="feature-list">-->
@@ -165,7 +165,7 @@
 <!--                        <li>Contrôle d'accès selon les rôles</li>-->
 <!--                    </ul>-->
 
-                    <h4>2. Interface Utilisateur</h4>
+                    <h4>3. Interface Utilisateur</h4>
                     <ul class="feature-list">
                         <li>Amélioration de l'interface en ligne de commande</li>
                         <li>Menus adaptés selon le niveau d'habilitation</li>
@@ -178,18 +178,20 @@
 
                     <div style="margin: 20px 0;">
                         <h4>Menu Principal</h4>
-                        <p style="color: #666; font-style: italic; font-size: 1.2rem;">[Insérez une capture de votre menu principal]</p>
+                        <img src="../img/Projet/Projet_scolaire/P2/ScreenAccueil.png" alt="Modèle Conceptuel de Données M2L" style="max-width: 100%; height: auto;">
+                    </div>
+
+                    <div style="margin: 20px 0;">
+                        <h4>Gestion des Ligues</h4>
+                        <img src="../img/Projet/Projet_scolaire/P2/Personnel_Ligue.gif" alt="Modèle Conceptuel de Données M2L" style="max-width: 100%; height: auto;">
                     </div>
 
                     <div style="margin: 20px 0;">
                         <h4>Gestion des Employés</h4>
-                        <p style="color: #666; font-style: italic; font-size: 1.2rem;">[Insérez une capture de la gestion des employés]</p>
+                        <img src="../img/Projet/Projet_scolaire/P2/Personnel_Emp.gif" alt="Modèle Conceptuel de Données M2L" style="max-width: 100%; height: auto;">
                     </div>
 
-<!--                    <div style="margin: 20px 0;">-->
-<!--                        <h4>Authentification</h4>-->
-<!--                        <p style="color: #666; font-style: italic; font-size: 1.2rem;">[Insérez une capture de l'écran de connexion]</p>-->
-<!--                    </div>-->
+
                 </div>
             </div>
         </div>
