--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="about-text">
                 <h2>À propos de moi</h2>
                 <p>
-                    Je suis étudiant en BTS SIO et j’aime comprendre et construire des choses en informatique.
+                    Je suis étudiant en BTS SIO (Services Informatiques aux Organisations) et j’aime comprendre et construire des choses en informatique.
                     Que ce soit coder, structurer des données ou imaginer comment une application doit fonctionner,
                     j’aime surtout trouver des solutions concrètes à des problèmes réels.
 
@@ -137,10 +137,10 @@
         <h3 style="font-size: 2rem; margin: 40px 0 30px; text-align: left;">Projets de Cours</h3>
         <div class="projects-grid">
             <div class="project-card">
-                <a href="Pages/Portfolio.html">
-                    <img src="img/Layout/portfolio-logo.png" alt="Portfolio">
+                <a href="Pages/HeathyDrivers.html">
+                    <img src="/" alt="HeathyDrivers">
                     <div class="project-info">
-                        <h3>Portfolio</h3>
+                        <h3>HeathyDrivers (à venir)</h3>
                     </div>
                 </a>
             </div>
