--- a/Pages/legolas.html
+++ b/Pages/legolas.html
@@ -103,6 +103,22 @@
         <div class="color-band"></div>
 
         <!-- Section Portfolio avec texte -->
+        <div id="diagrame" class="section">
+            <div class="boxed text-center">
+                <h2>Diagramme de Gantt</h2>
+                <div class="flex" style="justify-content: center">
+                    <div class="w60 wm100 portfolio-txt">
+                        <a href="../img/Stage/S1/Diagrame.png" target="_blank">
+                            <img src="../img/Stage/S1/Diagrame.png" alt="Makefile" class="image-code">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="color-band"></div>
+
+        <!-- Section Portfolio avec texte -->
         <div id="Documentation" class="section">
             <div class="boxed text-center">
                 <h2>Documentation</h2>
