--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="about-text">
                 <h2>À propos de moi</h2>
                 <p>
-                    Je suis étudiant en BTS SIO (Services Informatiques aux Organisations) et j’aime comprendre et construire des choses en informatique.
+                    Je suis étudiant en BTS SIO (Services Informatiques aux Organisations) et j’aime comprendre et construire en informatique.
                     Que ce soit coder, structurer des données ou imaginer comment une application doit fonctionner,
                     j’aime surtout trouver des solutions concrètes à des problèmes réels.
 
